# server

./: .env.example  .example.env  .gitignore  .pre-commit-config.yaml  Dockerfile  README.MD  docker-compose.dev.yml  docker-compose.prod.yml  external_services.yml  manage.py  pyproject.toml
.github/: depandabot.yml  dependabot.yml
.github/workflows/: codeql-analysis.yml  gitleaks.yml  lint.yml  push_image.yml  test.yml
context/: admin.py  apps.py  models.py  serializers.py  translation.py  views.py
context/migrations/: 0001_initial.py  0002_add_verbose_name.py  0003_increase_code_max_length.py
context/tests/: test_API.py
docker/: docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.test.yml  entrypoint.dev.sh  entrypoint.prod.sh  entrypoint.test.sh  external_services.yml
kubernetes/: celery_worker.yml  cert_issuer.yml  ingress.yml  kustomization.example.env  kustomization.template.yml  server.yml  server_service.yml
kubernetes/certifcate/: certificate.yml
kubernetes/certificate/: cert_issuer.yml  kustomization.template.yml  superset_certificate.yml
kubernetes/ingress/: cert_issuer.yml  ingress.yml  kustomization.template.yml  superset_ingress.yml
kubernetes/server/: celery_worker.yml  cloudflare.example.env  external_dns.yml  kustomization.template.yml  server.example.env  server.yml  service.yml
kubernetes/superset/: kustomization.template.yml  service.yml  superset.example.env  superset.yml  superset_config.py
neatplus/: admin.py  asgi.py  auth_backends.py  auth_validators.py  authentication.py  bakery.py  celery.py  fields.py  filters.py  managers.py  models.py  pagination.py  permissions.py  serializers.py  settings.py  storage_backends.py  urls.py  utils.py  views.py  wsgi.py
neatplus/tests/: __init__.py  test_API.py  test_admin.py
notification/: admin.py  apps.py  dispatch.py  filters.py  models.py  serializers.py  views.py
notification/migrations/: 0001_initial.py  0002_notice.py  0003_add_verbose_name.py
notification/tests/: test_API.py
organization/: admin.py  apps.py  filters.py  models.py  permissions.py  serializers.py  signals.py  views.py
organization/migrations/: 0001_initial.py  0002_organization_description.py  0003_organization_member_request_status.py  0004_organization_logo.py  0005_organization_acronym.py  0006_organization_mptt.py  0007_organization_mptt_rebuild.py  0008_add_verbose_name.py
organization/templates/: accept_project.txt  new_member_request.txt  new_project.txt  organization_change_form.html  organization_member_request_change_form.html  reject_member_request.txt  reject_organization.txt  reject_project.txt
organization/tests/: test_API.py
project/: admin.py  apps.py  filters.py  models.py  permissions.py  serializers.py  signals.py  utils.py  views.py
project/migrations/: 0001_initial.py  0002_alter_project_organization.py  0003_project_share_analytics_with_neat.py  0004_add_verbose_name.py  0005_fix_visibiltiy_choices_readable_name.py
project/templates/: project_change_form.html
project/tests/: test_API.py
scripts/: safety.sh
statement/: admin.py  apps.py  filters.py  models.py  serializers.py  translation.py  views.py
statement/migrations/: 0001_initial.py  0002_statement_tags.py  0003_statement_is_experimental.py  0004_add_verbose_name.py  0005_statement_question_option_version.py  0006_make_initial_version_active.py  0007_increase_code_max_length.py  0008_delete_option_mitigation_opportunity.py  0009_statement_question_groups.py  0010_add_question_group_to_weightage.py  0011_create_statement_formula.py  0012_create_statement_formula_version.py  0013_mitigation_opportunity_multiple_statement.py  0014_single_statement_to_m2m.py  0015_add_options_field_mitigation_opportunity.py  0016_add_new_fields_migration_opportunity.py
statement/tests/: test_API.py
summary/: admin.py  apps.py  filters.py  models.py  permissions.py  serializers.py  signals.py  translation.py  views.py
summary/migrations/: 0001_initial.py  0002_questionstatement.py  0002_surveyresult_module.py  0003_alter_statementtopic.py  0003_populate_module_field.py  0004_alter_statementtopic_options.py  0004_survey_result_module_non_nullable.py  0005_add_verbose_name.py  0005_add_weightage.py  0006_surveyresult_unique_module_survey_statement.py  0007_survey_result_question_group.py  0008_surveyresultfeedback.py  0009_alter_surveyresultfeedback_expected_score.py  0010_surveyresultfeedback_is_baseline.py  0011_alter_surveyresult_options.py  0012_alter_surveyresultfeedback_comment.py  0013_surveyresultfeedback_survey_result_one_baseline.py
summary/tests/: test_API.py
support/: admin.py  apps.py  filters.py  models.py  serializers.py  signals.py  translation.py  views.py
survey/: admin.py  apps.py  filters.py  models.py  permissions.py  serializers.py  translation.py  views.py
templates/: accept_reject_change_form.html
templatetags/: accept_reject.py
terraform/: .terraform.lock.hcl  backends.tf  cloudwatch_log_group.tf  cloudwatch_metrics.tf  eks_cluster.tf  eks_node_group.tf  internet_gateway.tf  local.tf  nat_gateway.tf  network_acl.tf  outputs.tf  providers.tf  random.tf  rds.tf  redis.tf  s3.tf  subnet.tf  time.tf  variables.tf  vpc.tf  vpc_flow_log.tf
user/: admin.py  apps.py  models.py  password_validation.py  serializers.py  signals.py  tasks.py  views.py
(+49 files in other folders)
