[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
extend-exclude = "migrations/"

[tool.isort]
skip_glob = ["__pycache__", "**/migrations"]
profile = "black"

[tool.poetry]
name = "neatplus-server"
version = "0.0.1"
description = "Neatplus server"
license = "GPL-3.0-only"
authors = ["NEAT+ <contact@neatplus.org>"]
readme = "README.MD"
classifiers = ["Private :: Do Not Upload"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^3.2.12"
environs = { version = "^9.5.0", extras = ["django"] }
marshmallow = "^3.14.1"
uvicorn = { version = "^0.17.4", extras = ["standard"], optional = true }
gunicorn = { version = "^20.1.0", optional = true }
psycopg2-binary = "^2.9.3"
djangorestframework = "^3.13.1"
django-filter = "^21.1"
djangorestframework-simplejwt = "^5.0.0"
djangorestframework-camel-case = "^1.3.0"
django-admin-interface = "^0.18.6"
django-otp = "^1.1.3"
qrcode = "^7.3/1"
django-cors-headers = "^3.11.0"
django-silk = "^4.2.0"
django-storages = { version = "^1.12.3", extras = ["boto3"] }
sentry-sdk = "^1.5.5"
celery = "^5.2.3"
redis = "^4.1.4"
django-modeltranslation = "^0.17.5"
django-ordered-model = "^3.5"
drf-spectacular = "^0.21.2"
Pillow = "^9.0.1"
django-ckeditor = "^6.2.0"
djangorestframework-gis = "^0.18"
django-admin-autocomplete-filter = "^0.7.1"
drf-recaptcha = "^2.0.7"
PyYAML = "^6.0"
django-mptt = "^0.13.4"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
isort = "^5.10.1"
safety = "^1.10.3"
pre-commit = "^2.17.0"
django-extensions = "^3.1.5"
ptpython = "^3.0.20"
ipython = "^8.0.1"
Werkzeug = "^2.0.3"
pyparsing = "^3.0.7"
pydot = "^1.4.2"
model-bakery = "^1.4.0"

[tool.poetry.extras]
asgi = ["uvicorn", "gunicorn"]
