[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
extend-exclude = "migrations/"

[tool.isort]
skip_glob = ["__pycache__", "**/migrations"]
profile = "black"

[tool.poetry]
name = "neatplus-server"
version = "0.0.1"
description = "Neatplus server"
license = "GPL-3.0-only"
authors = ["NEAT+ <contact@neatplus.org>"]
readme = "README.MD"
classifiers = ["Private :: Do Not Upload"]

[tool.poetry.dependencies]
python = "^3.11"
Django = "^3.2.15"
environs = { version = "^9.5.0", extras = ["django"] }
marshmallow = "^3.17.0"
uvicorn = { version = "^0.20.0", extras = ["standard"], optional = true }
gunicorn = { version = "^20.1.0", optional = true }
psycopg2-binary = "^2.9.3"
djangorestframework = "^3.13.1"
django-filter = "^22.1"
djangorestframework-simplejwt = "^5.2.0"
djangorestframework-camel-case = "^1.3.0"
django-admin-interface = "^0.24.2"
django-otp = "^1.1.3"
qrcode = "^7.3.1"
django-cors-headers = "^3.13.0"
django-silk = "^5.0.1"
django-storages = { version = "^1.12.3", extras = ["boto3"] }
sentry-sdk = "^1.7.0"
celery = { version = "^5.2.7", extras = ["redis"] }
django-modeltranslation = "^0.18.2"
django-ordered-model = "^3.6"
drf-spectacular = "^0.25.1"
Pillow = "^9.2.0"
django-ckeditor = "^6.4.2"
djangorestframework-gis = "^1.0"
django-admin-autocomplete-filter = "^0.7.1"
drf-recaptcha = "^2.0.7"
PyYAML = "^6.0"
django-mptt = "^0.14.0"
django-oauth-toolkit = "^2.1.0"
watchtower = "^3.0.0"
django-defender = "^0.9.5"
django-reversion = "^5.0.4"

[tool.poetry.group.dev.dependencies]
black = "^22.6.0"
isort = "^5.10.1"
safety = "^2.0.0"
pre-commit = "^2.20.0"
django-extensions = "^3.2.0"
Werkzeug = "^2.2.3"
model-bakery = "^1.6.0"

[tool.poetry.extras]
asgi = ["uvicorn", "gunicorn"]
